fix: update padding-block on #x_pageDiv for improved spacing

--- a/XOT/base/_base.scss
+++ b/XOT/base/_base.scss
@@ -34,7 +34,7 @@
 
 /* CONTENT RESET */
 #x_pageDiv {
-    padding-block: var(--size-fluid-2);
+    padding-block: var(--size-fluid-3); 
     width: 90%;
 }
 
